--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -37,7 +37,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "os-name": "^2.0.1",
+    "inquirer": "^1.2.2",
+    "minimist": "^1.2.0",
+    "lodash-es": "^4.16.6",
+    "superagent": "^2.3.0",
+    "opn": "^4.0.2",
+    "cross-spawn": "^4.0.2"
   },
   "jest": {
     "moduleFileExtensions": ["ts", "js"],
