--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -38,13 +38,21 @@
   "license": "MIT",
   "devDependencies": {
     "@ionic/cli-utils": "^0.0.1",
+    "@types/form-data": "0.0.33",
     "chalk": "^1.1.3"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
+  },
+  "dependencies": {
+    "form-data": "^2.1.2",
+    "node-fetch": "^1.6.3"
   }
 }
