--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@ionic/cli-utils": "^0.0.1",
     "@types/form-data": "0.0.33",
+    "@types/xml2js": "0.0.32",
     "chalk": "^1.1.3"
   },
   "jest": {
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "form-data": "^2.1.2",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "xml2js": "^0.4.17"
   }
 }
