--- a/packages/cli-plugin-package/package.json
+++ b/packages/cli-plugin-package/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ionic/cli-plugin-cloud",
+  "name": "@ionic/cli-plugin-package",
   "version": "0.0.1",
-  "description": "Ionic Cloud Plugin for Ionic CLI",
+  "description": "Ionic Package Plugin for Ionic CLI",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
@@ -37,8 +37,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "diff": "^3.0.1",
-    "ssh-config": "^1.0.0",
     "chalk": "^1.1.3",
     "@ionic/cli-utils": "^0.0.1"
   },
