--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "lerna": "2.0.0-beta.30",
-  "version": "independent"
+  "lerna": "2.0.0-beta.34",
+  "version": "independent",
+  "packages": [
+    "packages/*"
+  ]
 }
