--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -54,9 +54,9 @@
     "testRegex": "/__tests__/.*\\.(ts|js)$"
   },
   "dependencies": {
+    "@ionic/cli-utils": "^0.0.1",
     "form-data": "^2.1.2",
     "node-fetch": "^1.6.3",
-    "xml2js": "^0.4.17",
-    "@ionic/cli-utils": "^0.0.1"
+    "xml2js": "^0.4.17"
   }
 }
