--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -37,20 +37,27 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/ncp": "^2.0.0",
     "chalk": "^1.1.3",
-    "os-name": "^2.0.1",
+    "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
-    "minimist": "^1.2.0",
     "lodash-es": "^4.16.6",
-    "superagent": "^2.3.0",
+    "minimist": "^1.2.0",
     "opn": "^4.0.2",
-    "cross-spawn": "^4.0.2"
+    "os-name": "^2.0.1",
+    "superagent": "^2.3.0"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
+  },
+  "dependencies": {
+    "ncp": "^2.0.0"
   }
 }
