--- a/packages/cli-core/package.json
+++ b/packages/cli-core/package.json
@@ -38,6 +38,7 @@
   "license": "MIT",
   "devDependencies": {
     "@ionic/cli-utils": "^0.0.1",
+    "@types/archiver": "^0.15.36",
     "chalk": "^1.1.3"
   },
   "jest": {
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "@ionic/app-generators": "0.0.4",
+    "archiver": "^1.3.0",
     "opn": "^4.0.2"
   }
 }
