--- a/packages/cli-plugin-ionic-angular/tsconfig.json
+++ b/packages/cli-plugin-ionic-angular/tsconfig.json
@@ -13,7 +13,8 @@
     "strictNullChecks": false,
     "target": "es6",
     "lib": [
-      "es2016"
+      "es2016",
+      "dom"
     ]
   },
   "include": [
