--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
   "scripts": {
+    "lint": "tslint -c tslint.json 'packages/*/src/**/*.ts' 'scripts/**/*.ts'",
     "build": "tsc",
     "watch": "tsc -w",
     "docs": "node ./scripts/createMarkdownDocs.js ionic && node ./scripts/createMarkdownDocs.js cli-plugin-cordova",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
-    "publish:beta": "lerna publish --npm-tag beta"
+    "publish:beta": "lerna publish --npm-tag beta",
+    "precommit": "npm run lint"
   },
   "devDependencies": {
     "@types/node": "^6.0.68",
@@ -14,6 +16,7 @@
     "concurrently": "^3.4.0",
     "coveralls": "^2.2.0",
     "eslint-config-ionic": "0.0.2",
+    "husky": "^0.13.3",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "lerna": "2.0.0-beta.38",
