--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,13 @@ machine:
     version: v6.1.0
 
 dependencies:
+  cache_directories:
+    - packages/cli-plugin-cordova/node_modules
+    - packages/cli-plugin-ionic-angular/node_modules
+    - packages/cli-plugin-ionic1/node_modules
+    - packages/cli-plugin-proxy/node_modules
+    - packages/cli-utils/node_modules
+    - packages/ionic/node_modules
   post:
     - npm run build
     - cd packages/cli-utils && npm install && npm run build
