--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "tsc -w",
     "docs": "node ./scripts/createMarkdownDocs.js ionic && node ./scripts/createMarkdownDocs.js cli-plugin-cordova",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
-    "publish:beta": "lerna publish --npm-tag beta",
+    "publish:beta": "lerna publish --exact --npm-tag beta",
     "publish:ci": "npm run publish:canary -- --yes",
     "prepush": "npm run lint"
   },
