--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "3.0.0-beta8",
+  "version": "3.0.0-beta9",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
@@ -50,7 +50,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ionic/cli-utils": "^0.0.12",
+    "@ionic/cli-utils": "1.0.0-beta0",
     "chalk": "^1.1.3",
     "inquirer": "^3.0.6",
     "minimist": "^1.2.0",
