--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -9,14 +9,8 @@
   "scripts": {
     "clean": "rm -rf index.* bootstrap.* definitions.* guards.* ./lib ./commands ./dist",
     "lint": "tslint --config ../../../tslint.js --project tsconfig.json --type-check",
-    "build": "npm run clean && npm run build-ts && npm run build-js",
-    "build-ts": "tsc",
-    "build-js": "npm run script-prepublish",
-    "watch": "concurrently -p \"{name} \" -n \"TS,JS\" -c \"cyan.bold,yellow.dim\" \"npm run watch-ts\" \"npm run watch-js\"",
-    "watch-ts": "tsc -w",
-    "watch-js": "cross-env-shell IONIC_PREPUBLISH_PLUGIN_VERSION=${npm_package_version}-local \"npm run watch-js-chokidar\"",
-    "watch-js-chokidar": "chokidar --silent \"index.js\" -c \"npm run build-js\"",
-    "script-prepublish": "cli-scripts-prepublish @ionic/cli-utils",
+    "build": "npm run clean && tsc",
+    "watch": "tsc -w",
     "test": "jest",
     "prepublishOnly": "npm run build"
   },
