--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -64,7 +64,8 @@
     "tiny-lr": "^1.0.5",
     "tslib": "^1.7.1",
     "uuid": "^3.0.1",
-    "wrap-ansi": "^3.0.1"
+    "wrap-ansi": "^3.0.1",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
     "@angular/compiler": "^4.3.3",
@@ -85,6 +86,7 @@
     "@types/semver": "^5.3.33",
     "@types/tar": "^1.0.29",
     "@types/uuid": "^3.4.0",
+    "@types/ws": "^3.0.2",
     "rxjs": "^5.4.2"
   },
   "jest": {
