--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -56,7 +56,7 @@
     "@ionic/cli-scripts": "0.3.3",
     "@types/chalk": "^0.4.31",
     "@types/opn": "^3.0.28",
-    "@types/rimraf": "0.0.28"
+    "@types/rimraf": "^2.0.2"
   },
   "jest": {
     "moduleFileExtensions": [
