--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -45,6 +45,7 @@
   "license": "MIT",
   "dependencies": {
     "@ionic/cli-utils": "1.9.2",
+    "@ionic/discover": "^0.2.1",
     "chalk": "^2.0.0",
     "opn": "^5.1.0",
     "os-name": "^2.0.1",
