--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -40,7 +40,7 @@
     "archiver": "^2.1.0",
     "basic-auth": "^1.1.0",
     "body-parser": "^1.18.1",
-    "chalk": "^2.2.0",
+    "chalk": "2.2.0",
     "chokidar": "^1.7.0",
     "ci-info": "^1.1.1",
     "cross-spawn": "^5.1.0",
