--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@ionic/cli-utils": "1.13.1",
     "@ionic/discover": "^0.3.3",
-    "chalk": "^2.2.0",
+    "chalk": "2.2.0",
     "opn": "^5.1.0",
     "os-name": "^2.0.1",
     "rimraf": "^2.6.2",
