--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -41,7 +41,7 @@
     "archiver": "^2.1.0",
     "basic-auth": "^1.1.0",
     "body-parser": "^1.18.1",
-    "chalk": "2.2.0",
+    "chalk": "^2.3.0",
     "chokidar": "^1.7.0",
     "ci-info": "^1.1.1",
     "cross-spawn": "^5.1.0",
@@ -59,7 +59,7 @@
     "slice-ansi": "^1.0.0",
     "ssh-config": "^1.1.1",
     "string-width": "^2.1.1",
-    "superagent": "^3.6.3",
+    "superagent": "^3.8.0",
     "tar": "^2.2.1",
     "tiny-lr": "^1.0.5",
     "tslib": "^1.8.0",
@@ -75,21 +75,21 @@
     "@ionic/cli-scripts": "0.3.6",
     "@types/archiver": "^2.0.1",
     "@types/basic-auth": "^1.1.2",
-    "@types/body-parser": "^1.16.5",
+    "@types/body-parser": "^1.16.6",
     "@types/chokidar": "^1.7.3",
     "@types/clean-css": "^3.4.30",
     "@types/diff": "^3.2.2",
-    "@types/express": "^4.0.37",
+    "@types/express": "^4.0.38",
     "@types/gulp": "^3.8.33",
     "@types/inquirer": "0.0.35",
-    "@types/lodash": "^4.14.78",
+    "@types/lodash": "^4.14.80",
     "@types/minimist": "^1.2.0",
     "@types/opn": "^3.0.28",
     "@types/semver": "^5.4.0",
     "@types/tar": "^1.0.29",
     "@types/uuid": "^3.4.3",
     "@types/ws": "^3.2.0",
-    "rxjs": "^5.4.2"
+    "rxjs": "^5.5.2"
   },
   "jest": {
     "globals": {
