--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "ncp": "^2.0.0",
+    "rimraf": "^2.6.2",
     "strip-ansi": "^4.0.0",
     "superagent": "^3.8.0",
     "tslib": "^1.8.0"
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.1",
+    "@types/rimraf": "^2.0.2",
     "@types/superagent": "^3.5.6"
   }
 }
