--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -49,14 +49,12 @@
     "chalk": "^2.3.0",
     "opn": "^5.1.0",
     "os-name": "^2.0.1",
-    "rimraf": "^2.6.2",
     "semver": "^5.3.0",
     "tslib": "^1.8.0"
   },
   "devDependencies": {
     "@ionic/cli-scripts": "0.3.6",
-    "@types/opn": "^3.0.28",
-    "@types/rimraf": "^2.0.2"
+    "@types/opn": "^3.0.28"
   },
   "jest": {
     "globals": {
