--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
-    "docs": "node ./packages/@ionic/cli-scripts/docs.js",
+    "docs": "node ./packages/@ionic/cli-scripts/bin/docs",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
     "publish": "lerna publish --exact --conventional-commits",
