--- a/packages/@ionic/cli-scripts/package.json
+++ b/packages/@ionic/cli-scripts/package.json
@@ -1,8 +1,26 @@
 {
   "name": "@ionic/cli-scripts",
   "version": "0.3.6",
+  "scripts": {
+    "clean": "rm -rf ./dist",
+    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "build": "npm run clean && tsc",
+    "watch": "tsc -w"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "ansi-styles": "^3.2.0",
-    "escape-string-regexp": "^1.0.5"
+    "escape-string-regexp": "^1.0.5",
+    "strip-ansi": "^4.0.0",
+    "tslib": "^1.8.0"
+  },
+  "devDependencies": {
+    "@ionic/cli-framework": "0.1.1",
+    "@ionic/cli-utils": "1.18.0",
+    "@types/ansi-styles": "^2.0.30",
+    "@types/escape-string-regexp": "0.0.32",
+    "@types/strip-ansi": "^3.0.0",
+    "ionic": "3.18.0"
   }
 }
