--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -49,10 +49,10 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.7.0",
-    "@angular-devkit/build-angular": "0.7.0",
-    "@angular-devkit/core": "0.7.0-rc.1",
-    "@angular-devkit/schematics": "0.7.0-rc.1",
+    "@angular-devkit/architect": "~0.7.2",
+    "@angular-devkit/build-angular": "~0.7.2",
+    "@angular-devkit/core": "~0.7.2",
+    "@angular-devkit/schematics": "~0.7.2",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
     "lint-staged": "^7.2.0",
@@ -61,9 +61,9 @@
     "typescript": "~3.0.1"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "0.7.0-rc.1",
-    "@angular-devkit/build-angular": "0.7.0-rc.1",
-    "@angular-devkit/core": "0.7.0-rc.1",
-    "@angular-devkit/schematics": "0.7.0-rc.1"
+    "@angular-devkit/architect": "~0.7.2",
+    "@angular-devkit/build-angular": "~0.7.2",
+    "@angular-devkit/core": "~0.7.2",
+    "@angular-devkit/schematics": "~0.7.2"
   }
 }
