--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -36,8 +36,8 @@
     "typescript": ">=2.6.2 <2.8"
   },
   "devDependencies": {
-    "@angular-devkit/core": "0.7.0-rc.1",
-    "@angular-devkit/schematics": "0.7.0-rc.1",
+    "@angular-devkit/core": "~0.7.2",
+    "@angular-devkit/schematics": "~0.7.2",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
@@ -49,7 +49,7 @@
     "tslint": "^5.9.1"
   },
   "peerDependencies": {
-    "@angular-devkit/core": "0.7.0-rc.1",
-    "@angular-devkit/schematics": "0.7.0-rc.1"
+    "@angular-devkit/core": "~0.7.2",
+    "@angular-devkit/schematics": "~0.7.2"
   }
 }
