--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ aliases:
         - dependency-cache-{{ checksum "packages/@ionic/discover/package.json" }}
         - dependency-cache-{{ checksum "packages/@ionic/lab/package.json" }}
         - dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
+        - dependency-cache-{{ checksum "packages/@ionic/utils-network/package.json" }}
         - dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
         - dependency-cache-{{ checksum "packages/cli-scripts/package.json" }}
         - dependency-cache-{{ checksum "packages/ionic/package.json" }}
@@ -44,6 +45,11 @@ aliases:
       key: dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
       paths:
         - packages/@ionic/schematics-angular/node_modules
+
+  - &save-cache-utils-network
+      key: dependency-cache-{{ checksum "packages/@ionic/utils-network/package.json" }}
+      paths:
+        - packages/@ionic/utils-network/node_modules
 
   - &save-cache-v1-toolkit
       key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
@@ -92,6 +98,7 @@ jobs:
       - save_cache: *save-cache-discover
       - save_cache: *save-cache-lab
       - save_cache: *save-cache-schematics-angular
+      - save_cache: *save-cache-utils-network
       - save_cache: *save-cache-v1-toolkit
       - save_cache: *save-cache-cli-scripts
       - save_cache: *save-cache-ionic
