--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -45,14 +45,14 @@
     "@ionic/cli-framework": "1.0.6",
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
-    "rxjs": "^6.2.0",
+    "rxjs": "~6.2.0",
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.7.2",
-    "@angular-devkit/build-angular": "~0.7.2",
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2",
+    "@angular-devkit/architect": "~0.8.0-rc.1",
+    "@angular-devkit/build-angular": "~0.8.0-rc.1",
+    "@angular-devkit/core": "~0.8.0-rc.1",
+    "@angular-devkit/schematics": "~0.8.0-rc.1",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
     "lint-staged": "^7.2.0",
@@ -61,9 +61,9 @@
     "typescript": "~3.0.1"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "~0.7.2",
-    "@angular-devkit/build-angular": "~0.7.2",
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2"
+    "@angular-devkit/architect": "~0.8.0-rc.1",
+    "@angular-devkit/build-angular": "~0.8.0-rc.1",
+    "@angular-devkit/core": "~0.8.0-rc.1",
+    "@angular-devkit/schematics": "~0.8.0-rc.1"
   }
 }
