--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -30,14 +30,14 @@
   ],
   "schematics": "./collection.json",
   "dependencies": {
-    "@schematics/angular": "~0.7.2",
+    "@schematics/angular": "~0.8.0-rc.1",
     "lodash": "^4.17.5",
     "tslib": "^1.9.0",
     "typescript": ">=2.6.2 <2.10"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2",
+    "@angular-devkit/core": "~0.8.0-rc.1",
+    "@angular-devkit/schematics": "~0.8.0-rc.1",
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "jest": "^23.0.1",
@@ -49,7 +49,7 @@
     "tslint": "^5.9.1"
   },
   "peerDependencies": {
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2"
+    "@angular-devkit/core": "~0.8.0-rc.1",
+    "@angular-devkit/schematics": "~0.8.0-rc.1"
   }
 }
