--- a/packages/@ionic/ng-toolkit/package.json
+++ b/packages/@ionic/ng-toolkit/package.json
@@ -49,21 +49,23 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.8.0-rc.1",
-    "@angular-devkit/build-angular": "~0.8.0-rc.1",
-    "@angular-devkit/core": "~0.8.0-rc.1",
-    "@angular-devkit/schematics": "~0.8.0-rc.1",
+    "@angular-devkit/architect": "~0.9.0-beta.2",
+    "@angular-devkit/build-angular": "~0.9.0-beta.2",
+    "@angular-devkit/core": "~0.9.0-beta.2",
+    "@angular-devkit/schematics": "~0.9.0-beta.2",
     "@types/debug": "0.0.30",
     "@types/node": "^6.0.101",
+    "@types/webpack": "^4.4.11",
+    "@types/webpack-dev-server": "^3.1.0",
     "lint-staged": "^7.2.0",
     "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "~3.0.1"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "~0.8.0-rc.1",
-    "@angular-devkit/build-angular": "~0.8.0-rc.1",
-    "@angular-devkit/core": "~0.8.0-rc.1",
-    "@angular-devkit/schematics": "~0.8.0-rc.1"
+    "@angular-devkit/architect": "~0.9.0-beta.2",
+    "@angular-devkit/build-angular": "~0.9.0-beta.2",
+    "@angular-devkit/core": "~0.9.0-beta.2",
+    "@angular-devkit/schematics": "~0.9.0-beta.2"
   }
 }
