--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -33,7 +33,7 @@
     "@schematics/angular": "0.9.0-beta.3",
     "lodash": "^4.17.5",
     "tslib": "^1.9.0",
-    "typescript": "~3.0.1"
+    "typescript": "3.0.1"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.9.0-beta.3",
